<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/nexmo_activity_layout_margin">

        <!-- Customizable introductory text -->
        <TextView
            android:id="@+id/phone_number_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/nexmo_activity_item_padding"
            android:layout_marginTop="@dimen/nexmo_activity_vertical_margin"
            android:text="@string/nexmo_verify_phone_hint"
            android:textColor="@android:color/black"/>

        <!-- Country name spinner -->
        <Spinner
            android:id="@+id/country_name_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="@dimen/nexmo_activity_vertical_margin"
            android:prompt="@string/nexmo_verify_country_name_hint"/>

        <!-- Country code + Phone number layout -->
        <LinearLayout
            android:id="@+id/phone_number_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nexmo_activity_vertical_margin">
            <TextView
                android:id="@+id/country_prefix_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/nexmo_activity_item_padding"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/nexmo_activity_item_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="phone"
                android:hint="@string/nexmo_verify_number_enter"/>
        </LinearLayout>

        <!-- Send Code button. -->
        <Button
            android:id="@+id/verify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nexmo_verify_button"
            android:layout_gravity="center"
            android:padding="@dimen/nexmo_activity_item_padding"
            android:layout_marginTop="@dimen/nexmo_activity_vertical_margin"
            android:onClick="onSendCode"
            android:text="@string/nexmo_verify_send_code"
            android:textColor="@android:color/white"/>

        <!-- Cancel button -->
        <Button
            android:id="@+id/verify_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/nexmo_activity_item_padding"
            android:layout_marginTop="@dimen/nexmo_activity_vertical_small_margin"
            android:text="@string/nexmo_verify_cancel"
            android:onClick="onCancelVerification"
            android:background="@drawable/nexmo_secondary_button"
            android:textColor="@color/nexmo_default_background"/>
    </LinearLayout>
</ScrollView>